sonar cleanup